src/objects/SRS_Tracker__c.object
<CustomObject>
    <description>Object used by call center SRS agents to document interactions with front line agents and escalated calls</description>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <description>Displays either the ACET Agent&apos;s name or Non ACET Agent&apos;s name depending on what&apos;s filled out.  For reporting purposes.</description>
        <formula>IF(  Agent_s_Name__c  &lt;&gt;&quot;&quot;,  Agent_s_Name__r.FirstName  &amp; &quot; &quot; &amp;  Agent_s_Name__r.LastName , Non_ACET_Agent_s_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_User_Type__c</fullName>
        <description>Captures if Agent is Onshore or Offshore</description>
        <formula>TEXT( Agent_s_Name__r.Agent_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_s_Department__c</fullName>
        <description>Captures Dept of Agent</description>
        <formula>Agent_s_Name__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent&apos;s Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_s_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to capture the agent being assisted</description>
        <inlineHelpText>Select the name of the agent being assisted (if in ACET). Use the magnifying glass to search for the agent’s name.</inlineHelpText>
        <label>ACET Agent&apos;s Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SRS_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_s_Profile__c</fullName>
        <formula>Agent_s_Name__r.SecureRoleName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent&apos;s Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_s_Role__c</fullName>
        <formula>Agent_s_Name__r.Role_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent&apos;s Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_s_Supervisor_Email__c</fullName>
        <description>Captures email address of agent&apos;s supervisor</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Field will populate when SRS record is saved</inlineHelpText>
        <label>Agent&apos;s Supervisor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Agent_s_Supervisor__c</fullName>
        <description>Captures name of agent&apos;s supervisor via workflow</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Field will populate when SRS record is saved</inlineHelpText>
        <label>Agent&apos;s Supervisor</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Reason_Subtype__c</fullName>
        <description>Captures Call Reason Subtype</description>
        <inlineHelpText>Select the most appropriate subtype</inlineHelpText>
        <label>Inquiry Reason Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Call_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st Level</fullName>
                </value>
                <value>
                    <fullName>2nd Level</fullName>
                </value>
                <value>
                    <fullName>Accreditation</fullName>
                </value>
                <value>
                    <fullName>Accumulations</fullName>
                </value>
                <value>
                    <fullName>ACET Provider Search Questions</fullName>
                </value>
                <value>
                    <fullName>Agent Found Answer</fullName>
                </value>
                <value>
                    <fullName>All Other</fullName>
                </value>
                <value>
                    <fullName>Appeals</fullName>
                </value>
                <value>
                    <fullName>Authorization Not Applied</fullName>
                </value>
                <value>
                    <fullName>Authorizations/Referrals</fullName>
                </value>
                <value>
                    <fullName>Authorization - Status</fullName>
                </value>
                <value>
                    <fullName>Balance Bill</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Benefit Clarification</fullName>
                </value>
                <value>
                    <fullName>Billed In Error</fullName>
                </value>
                <value>
                    <fullName>Billing Rep Not Assigned</fullName>
                </value>
                <value>
                    <fullName>BOR Update</fullName>
                </value>
                <value>
                    <fullName>Call Disconnected</fullName>
                </value>
                <value>
                    <fullName>Card Not Received</fullName>
                </value>
                <value>
                    <fullName>Certificate of Credible Coverage</fullName>
                </value>
                <value>
                    <fullName>Check/Stop Pay Reissue</fullName>
                </value>
                <value>
                    <fullName>Choice Plus</fullName>
                </value>
                <value>
                    <fullName>Claim Not On File</fullName>
                </value>
                <value>
                    <fullName>Claims- Status</fullName>
                </value>
                <value>
                    <fullName>COB</fullName>
                </value>
                <value>
                    <fullName>Cobra</fullName>
                </value>
                <value>
                    <fullName>Conditional Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Contract Inquiry</fullName>
                </value>
                <value>
                    <fullName>Copay Enhancement</fullName>
                </value>
                <value>
                    <fullName>Copy of ID Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Reason__c</fullName>
        <description>Captures Reason for the call</description>
        <inlineHelpText>Select the primary reason for the call</inlineHelpText>
        <label>Inquiry Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACET/Cirrus Platform</fullName>
                </value>
                <value>
                    <fullName>Appeals</fullName>
                </value>
                <value>
                    <fullName>Assistance Not Needed</fullName>
                </value>
                <value>
                    <fullName>Authorizations/Referrals</fullName>
                </value>
                <value>
                    <fullName>Balance Billing</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Call Disconnected</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Commissions</fullName>
                </value>
                <value>
                    <fullName>Disaster/Epidemic</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Fulfillment/Letter Generation</fullName>
                </value>
                <value>
                    <fullName>Group Billing</fullName>
                </value>
                <value>
                    <fullName>Group Eligibility</fullName>
                </value>
                <value>
                    <fullName>Member Eligibility</fullName>
                </value>
                <value>
                    <fullName>Provider Maintenance Related</fullName>
                </value>
                <value>
                    <fullName>Provider Search/Lookup</fullName>
                </value>
                <value>
                    <fullName>SAM Inquiry Reason</fullName>
                </value>
                <value>
                    <fullName>Portal Support</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                    <isActive>false</isActive>
                    <label>Enrollment</label>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                    <isActive>false</isActive>
                    <label>Fulfillment</label>
                </value>
                <value>
                    <fullName>Letter Generations</fullName>
                    <isActive>false</isActive>
                    <label>Letter Generation</label>
                </value>
                <value>
                    <fullName>Polaris</fullName>
                    <isActive>false</isActive>
                    <label>Polaris</label>
                </value>
                <value>
                    <fullName>TCOM</fullName>
                    <isActive>false</isActive>
                    <label>TCOM</label>
                </value>
                <value>
                    <fullName>Termination</fullName>
                    <isActive>false</isActive>
                    <label>Termination</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <description>Field to document if assistance is for legacy or migrated issue</description>
        <inlineHelpText>Select the appropriate option based on the platform of the policy</inlineHelpText>
        <label>Inquiry Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Legacy Assistance</fullName>
                </value>
                <value>
                    <fullName>Migrated Assistance</fullName>
                </value>
                <value>
                    <fullName>Legacy Escalated</fullName>
                </value>
                <value>
                    <fullName>Migrated Escalated</fullName>
                </value>
                <value>
                    <fullName>Request to speak to Onshore Agent</fullName>
                </value>
                <value>
                    <fullName>Call Returned to Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Callback_Comments__c</fullName>
        <description>captures comments from callback</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Document in detail the information for follow-up and updates</inlineHelpText>
        <label>Follow-Up Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Callback_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to document if a call back is required</description>
        <inlineHelpText>Select if any follow-up is needed</inlineHelpText>
        <label>Follow-Up Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseSRS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures the Case number of the SRS</description>
        <inlineHelpText>Enter the ACET Case number</inlineHelpText>
        <label>Case #</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SRS Tracker</relationshipLabel>
        <relationshipName>SRS_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coaching_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to capture if coaching of the agent is required</description>
        <inlineHelpText>Select to indicate that agent requires coaching</inlineHelpText>
        <label>Coaching Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Capture Comments</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter comments on the reason for the inquiry and any opportunities identified</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Field to capture the email address of the contact</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the email address</inlineHelpText>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Fax__c</fullName>
        <description>captures the fax number of the contact</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the fax number including area code</inlineHelpText>
        <label>Contact Fax #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Captures the constituent&apos;s name contacting the agent</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Document the caller name.</inlineHelpText>
        <label>Contact Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <description>captures phone number of contact</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the phone number including area code and/or extension</inlineHelpText>
        <label>Contact Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <inlineHelpText>To whom the agent is speaking</inlineHelpText>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expectation_Set__c</fullName>
        <description>Expectation Set</description>
        <inlineHelpText>Indicates the expectations for follow up set with the caller</inlineHelpText>
        <label>Expectation Set</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Daily</fullName>
                </value>
                <value>
                    <fullName>Contact Weekly</fullName>
                </value>
                <value>
                    <fullName>Outreach when Issue is Complete</fullName>
                </value>
                <value>
                    <fullName>Monitor Issue for Resolution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <description>captures the group ID</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>Required to be documented when group is in focus</inlineHelpText>
        <label>Group ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InteractionSRS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures the Interaction number</description>
        <inlineHelpText>Enter the ACET Interaction number</inlineHelpText>
        <label>Interaction</label>
        <referenceTo>Interaction__c</referenceTo>
        <relationshipLabel>SRS Tracker</relationshipLabel>
        <relationshipName>SRS_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <description>Enter a description of the issue including the reason for the inquiry and any opportunities identified.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Document in detail the question or issue</inlineHelpText>
        <label>Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <description>captures member id</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>Required to be documented when member is in focus</inlineHelpText>
        <label>Member ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Agent_s_SRS_Record__c</fullName>
        <description>Will check if running user is listed as Manager on SRS record for custom list views or reports</description>
        <formula>IF( $User.FirstName &amp; &quot; &quot; &amp; $User.LastName = Agent_s_Supervisor__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Agent&apos;s SRS Record</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_SRS_Record__c</fullName>
        <description>captures the running user and determines if they&apos;re the agent&apos;s name on the SRS record</description>
        <formula>IF($User.Id= Agent_s_Name__r.Id,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My SRS Record</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_ACET_Agent_s_Name__c</fullName>
        <description>captures the name of the agent if not in ACET</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the name of the agent if they are not in ACET</inlineHelpText>
        <label>Non-ACET Agent&apos;s Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Coaching_Comments__c</fullName>
        <description>used to capture comments related to coaching or opportunity</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Document in detail the reason for coaching or opportunity identified</inlineHelpText>
        <label>Opportunity/Coaching Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Subtype__c</fullName>
        <description>captures the subtype of the opportunity</description>
        <inlineHelpText>Select the opportunity subtype identified</inlineHelpText>
        <label>Opportunity Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Opportunity_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agent Behavior(s)</fullName>
                </value>
                <value>
                    <fullName>Appeals</fullName>
                </value>
                <value>
                    <fullName>Authorization Entry Error</fullName>
                </value>
                <value>
                    <fullName>Call Back Completed</fullName>
                </value>
                <value>
                    <fullName>Call Routing/Gatekeeper (Use When Agent Called Based On Process Directs Them To Call)</fullName>
                </value>
                <value>
                    <fullName>Call Transfer To Delegated Partner</fullName>
                </value>
                <value>
                    <fullName>Call Transfer To Legacy</fullName>
                </value>
                <value>
                    <fullName>Call Transfer To M&amp;R</fullName>
                </value>
                <value>
                    <fullName>Call Transfer To Polaris Member</fullName>
                </value>
                <value>
                    <fullName>Call Transfer To Polaris Provider</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Confirmation Of Info Provided By Agent</fullName>
                </value>
                <value>
                    <fullName>Confusing/Unclear Relay Of Details To Provider</fullName>
                </value>
                <value>
                    <fullName>Corporate Policy</fullName>
                </value>
                <value>
                    <fullName>Did Not Check Benefits Prior To Rendering Services</fullName>
                </value>
                <value>
                    <fullName>Did Not Complete Or Close Issue</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>Evicore</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Immediately Asked For Sup W/O Allowing Agent To Assist</fullName>
                </value>
                <value>
                    <fullName>Lack Of Confidence</fullName>
                </value>
                <value>
                    <fullName>Lack Of Proficiency (Use When Agent Lacked Skills To Answer Question I.E Training)</fullName>
                </value>
                <value>
                    <fullName>Lack Of Research</fullName>
                </value>
                <value>
                    <fullName>Misquote</fullName>
                </value>
                <value>
                    <fullName>Missing Data (Use When Information Requested By Caller In Not In Our Resources)</fullName>
                </value>
                <value>
                    <fullName>Navigation Assistance</fullName>
                </value>
                <value>
                    <fullName>Network Management</fullName>
                </value>
                <value>
                    <fullName>No Opportunity</fullName>
                </value>
                <value>
                    <fullName>Not Utilizing Resources</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <description>Captures the opportunity</description>
        <inlineHelpText>Select the opportunity identified</inlineHelpText>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agent Opportunity</fullName>
                </value>
                <value>
                    <fullName>Call Transfer Opportunity</fullName>
                </value>
                <value>
                    <fullName>Closed Loop/Commitment Team Opportunity</fullName>
                </value>
                <value>
                    <fullName>Delegated Arrangement</fullName>
                </value>
                <value>
                    <fullName>No Opportunity Identified</fullName>
                </value>
                <value>
                    <fullName>Other Department Opportunity</fullName>
                </value>
                <value>
                    <fullName>Positive Feedback</fullName>
                </value>
                <value>
                    <fullName>Process Opportunity</fullName>
                </value>
                <value>
                    <fullName>Provider Opportunity</fullName>
                </value>
                <value>
                    <fullName>Supervisor/Manager Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Producer_ID__c</fullName>
        <description>captures the ID of the producer</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>Required to be documented when producer is in focus</inlineHelpText>
        <label>Producer ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_ID__c</fullName>
        <description>captures the provider ID</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>Required to be documented when provider is in focus</inlineHelpText>
        <label>Provider ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Follow_up__c</fullName>
        <description>Reason for Follow Up- SRS Tracker</description>
        <label>Reason for Follow-Up</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested by Caller</fullName>
                </value>
                <value>
                    <fullName>De-escalation</fullName>
                </value>
                <value>
                    <fullName>Partner Management Outreach</fullName>
                </value>
                <value>
                    <fullName>Repeat Issue</fullName>
                </value>
                <value>
                    <fullName>Part of SRS Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>Enter a description of the resolution of the inquiry and opportunities.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Document in detail the resolution, next steps and path to source of truth</inlineHelpText>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <description>Captures the SR from the agent</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the Yoda SR (if legacy inquiry)</inlineHelpText>
        <label>Service Request#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of SRS Record</description>
        <inlineHelpText>Select &quot;Close&quot; if no additional work or follow up needs to be done</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Contact__c</fullName>
        <description>Field to capture how contact was made with SRS agent</description>
        <inlineHelpText>Select the method or reason for contact</inlineHelpText>
        <label>Type of Contact</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live Call from Agent</fullName>
                    <default>true</default>
                    <label>Live Call from Agent</label>
                </value>
                <value>
                    <fullName>Cold Transfer In</fullName>
                </value>
                <value>
                    <fullName>Follow Up</fullName>
                </value>
                <value>
                    <fullName>Request to Speak to Onshore Agent</fullName>
                </value>
                <value>
                    <fullName>Ghost Call</fullName>
                </value>
                <value>
                    <fullName>Misdirected Call</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SRS Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Call_Type__c</columns>
        <columns>Agent_s_Department__c</columns>
        <columns>Status__c</columns>
        <columns>Call_Reason__c</columns>
        <columns>Call_Reason_Subtype__c</columns>
        <columns>Callback_Required__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Agent_s_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All</label>
        <sharedTo>
            <group>SRS_Tracker_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MySRSRecords</fullName>
        <columns>NAME</columns>
        <columns>Call_Type__c</columns>
        <columns>Agent_s_Name__c</columns>
        <columns>Agent_s_Department__c</columns>
        <columns>Status__c</columns>
        <columns>Call_Reason__c</columns>
        <columns>Call_Reason_Subtype__c</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>Opportunity_Subtype__c</columns>
        <columns>Coaching_Required__c</columns>
        <columns>Callback_Required__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_SRS_Record__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My SRS Records</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsSRSRecords</fullName>
        <columns>NAME</columns>
        <columns>Call_Type__c</columns>
        <columns>Agent_Name__c</columns>
        <columns>Agent_s_Department__c</columns>
        <columns>Status__c</columns>
        <columns>Call_Reason__c</columns>
        <columns>Call_Reason_Subtype__c</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>Opportunity_Subtype__c</columns>
        <columns>Coaching_Required__c</columns>
        <columns>Callback_Required__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Agent_s_SRS_Record__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Team&apos;s SRS Records</label>
        <sharedTo>
            <group>SRS_Tracker_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SRSRecordsCreatedbyMe</fullName>
        <columns>NAME</columns>
        <columns>Call_Type__c</columns>
        <columns>Agent_s_Name__c</columns>
        <columns>Agent_s_Department__c</columns>
        <columns>Status__c</columns>
        <columns>Call_Reason__c</columns>
        <columns>Call_Reason_Subtype__c</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>Opportunity_Subtype__c</columns>
        <columns>Coaching_Required__c</columns>
        <columns>Callback_Required__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>SRS Records Created by Me</label>
        <sharedTo>
            <group>SRS_Tracker_Access</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SRS-{00000}</displayFormat>
        <label>SRS Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SRS Tracker</pluralLabel>
    <recordTypes>
        <fullName>Agent_Inquiry</fullName>
        <active>true</active>
        <description>Use to document interactions with agents</description>
        <label>Agent Inquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Escalated_Issue</fullName>
        <active>true</active>
        <description>Use to document escalated issues</description>
        <label>Escalated Issue</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Agent_Name</fullName>
        <active>true</active>
        <description>Requires an agent name</description>
        <errorConditionFormula>Non_ACET_Agent_s_Name__c =&quot;&quot; &amp;&amp;  Agent_s_Name__c =&quot;&quot;</errorConditionFormula>
        <errorMessage>Enter agent&apos;s name in ACET Agent or Non-ACET Agent&apos;s Name field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Group_ID_Required</fullName>
        <active>true</active>
        <description>Enforces Group ID is populated if Group is Contact Type</description>
        <errorConditionFormula>AND(
ISPICKVAL( Contact_Type__c , &quot;Group&quot;),
ISBLANK( Group_ID__c )
)</errorConditionFormula>
        <errorDisplayField>Group_ID__c</errorDisplayField>
        <errorMessage>Group ID is required</errorMessage>
    </validationRules>
</CustomObject>